# dependency-track-python

./: .gitignore  LICENSE.md  README.rst  pyproject.toml
.github/workflows/: publish.yml
dependencytrack/: violations.py
